Changelog
=========

1.1b1 (unreleased)
------------------

- Make example Bootstrap-based theme use the HTML5 DOCTYPE.
  [danjacka]

- Demote ZMI patch log message to debug level.
  [hannosch]

- Upgrade to ACE 1.0 via plone.resourceeditor
  [optilude]

- Put quotes around jQuery attribute selector values to appease
  jQuery 1.7.2.
  [danjacka]

1.1a2 (2012-08-30)
------------------

- Protect the control panel with a specific permission so it can be
  delegated.
  [davisagli]

- Advise defining ajax_load as ``request.form.get('ajax_load')`` in
  manifest.cfg.  For instance, the login_form has an hidden empty
  ajax_load input, which would give an unthemed page after submitting
  the form.
  [maurits]

- Change theme editor page templates to use main_template rather than
  prefs_main_template to avoid inserting CSS and JavaScript too early
  under plonetheme.classic.
  [danjacka]

1.1a1 (2012-08-08)
------------------

- Replace the stock "Themes" control panel with a renamed "Theming" control
  panel, which incorporates the former's settings under its "Advanced" tab.
  [optilude]

- Add a full in-Plone theme authoring environment
  [optilude, vangheem]

- Update IBeforeTraverseEvent import to zope.traversing.
  [hannosch]

- On tab "Manage themes", change table header to
  better describe what's actually listed.
  [kleist]

1.0 (2012-04-15)
----------------

* Prevent AttributeError when getRequest returns None.
  [maurits]

* Calculate subrequests against navigation root rather than portal.
  [elro]

* Supply closest context found for 404 pages.
  [elro]

* Lookup portal state with correct context.
  [elro]

1.0b9 - 2011-11-02
------------------

* Patch App.Management.Navigation to disable theming of ZMI pages.
  [elro]

1.0b8 - 2011-07-04
------------------

* Evaluate theme parameters regardless of whether there is a valid context or
  not (e.g. when templating a 404 page).
  [lentinj]

1.0b7 - 2011-06-12
------------------
