@@ -4,6 +4,10 @@ Changelog
 1.1b1 (unreleased)
 ------------------
 
+- Add diazo.debug option, route all error_log output through
+  this so debugging can be displayed
+  [lentinj]
+
 - Make example Bootstrap-based theme use the HTML5 DOCTYPE.
   [danjacka]
 
